--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -110,16 +110,19 @@ a:hover, a:focus, a:active {
 .text-md {
     font-size: 1.1rem !important;
 }
-.heading-md{
+
+.heading-md {
     font-size: 38px !important;
 }
 
-.heading-lg{
+.heading-lg {
     font-size: 45px !important;
 }
-.heading-sm{
+
+.heading-sm {
     font-size: 25px !important;
 }
+
 .text-lg {
     font-size: 1.4rem !important;
 }
@@ -127,6 +130,7 @@ a:hover, a:focus, a:active {
 .text-sm {
     font-size: 0.9rem !important;
 }
+
 .text-xs {
     font-size: 0.8rem !important;
 }
@@ -211,13 +215,6 @@ a:hover, a:focus, a:active {
 }
 
 
-@media (max-width: 767px) {
-    .card-white {
-        padding-left: 20px !important;
-        padding-right: 20px !important;
-    }
-}
-
 .border-bottom-light {
     border-bottom: 1px solid var(--light-grey) !important;
 }
@@ -268,9 +265,10 @@ a:hover, a:focus, a:active {
 
 
 /**********/
-.modal{
+.modal {
     z-index: 100600;
 }
+
 .modal-backdrop {
     z-index: 10400;
     background-color: rgba(0, 188, 212, 0.58) !important;
@@ -318,17 +316,31 @@ a:hover, a:focus, a:active {
     background-position: bottom;
 
 }
-.main-coworking-hero{
+
+.main-hero-area {
+    margin-top: -140px;
+    padding: 200px 0px 140px 0px;
+}
+
+.main-coworking-hero {
     background: url("../images/coworking-space.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
-    margin-top: -140px;
-    padding: 200px 0px 140px 0px;
+
 }
-.main-top-bar{
+
+.main-office-hero {
+    background: url("../images/offfices.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
+.main-top-bar {
     border-bottom: 1px solid #827f7f !important;
 }
+
 .main-home-hero h1 {
     font-size: 60px;
 
@@ -340,30 +352,37 @@ a:hover, a:focus, a:active {
     padding: 1.4rem 1.3rem;
     transition: .2s all;
 }
-.main-nav-header  .navbar-toggler-icon {
+
+.main-nav-header .navbar-toggler-icon {
     background: none !important;
     color: white;
 }
+
 .main-nav-header .fixed .navbar-toggler-icon {
     color: var(--primary-color) !important;
 }
-.main-nav-header .fixed .navbar-brand{
+
+.main-nav-header .fixed .navbar-brand {
     color: var(--secondary-color) !important;
 }
+
 .main-nav-header .fixed .nav-item .nav-link {
     color: var(--secondary-color);
 }
-.navbar-light .navbar-toggler:focus{
+
+.navbar-light .navbar-toggler:focus {
     box-shadow: none !important;
 }
+
 .main-nav-header .fixed {
-    position: fixed!important;
+    position: fixed !important;
     width: 100%;
     top: 0;
     z-index: 9999;
     box-shadow: 0 0 50px rgb(226 222 232 / 50%);
-    background: #fff!important;
+    background: #fff !important;
 }
+
 .main-nav-header .nav-item .nav-link:hover {
     color: var(--primary-color) !important;
 }
@@ -451,10 +470,11 @@ a:hover, a:focus, a:active {
     transition: all 0.5s ease-in-out;
 }
 
-.custom-btn-round:hover  {
+.custom-btn-round:hover {
     width: auto !important;
 
 }
+
 .custom-btn-round:hover .text-hide {
     transform: translateX(0);
     opacity: 1;
@@ -572,7 +592,8 @@ footer ul li a {
     background-repeat: no-repeat;
 
 }
-.main-office-heading{
+
+.main-office-heading {
     padding: 100px 15px 50px;
 }
 
@@ -581,24 +602,28 @@ footer ul li a {
     padding: 50px 30px;
     border-right: 1px solid rgba(255, 255, 255, 0.4);
     background-color: rgba(0, 0, 0, 0.05);
-    -webkit-transition:  all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
 
 }
-.heading-divider .heading-divider-text{
+
+.heading-divider .heading-divider-text {
     color: #A2A5A6 !important;
     font-style: italic;
 }
-.heading-divider-line{
+
+.heading-divider-line {
     height: 1px;
     width: 70px;
     background: #A2A5A6FF !important;
 }
-.main-about-section{
+
+.main-about-section {
     padding: 130px 0;
 }
-.main-office-card *{
-    -webkit-transition:  all 0.5s ease;
+
+.main-office-card * {
+    -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
 }
 
@@ -610,24 +635,27 @@ footer ul li a {
     transform: translateY(115px);
     transition: transform 0.5s ease;
 }
+
 .main-office-card .main-office-detail {
     transform: translateY(100%);
     opacity: 0;
-    transition: transform 0.5s ease;                                                                                                        ;
+    transition: transform 0.5s ease;;
 
 
 }
 
-.main-office-card:hover{
+.main-office-card:hover {
     background-color: rgba(0, 0, 0, 0.4);
 
 }
+
 .main-office-card:hover .main-office-title,
 .main-office-card:hover .main-office-detail {
     transform: translateY(0);
     opacity: 1;
 }
-.main-services-area{
+
+.main-services-area {
     padding: 120px 0;
     background: url("../images/slide4.jpg");
     background-size: cover;
@@ -636,52 +664,62 @@ footer ul li a {
     background-position: top;
 }
 
-.main-services-icon{
+
+.main-services-icon {
     width: 55px;
     margin-bottom: 30px;
     height: 55px;
 }
-.main-services-icon img{
+
+.main-services-icon img {
     object-fit: cover;
     width: 55px;
     height: 55px;
 }
-.main-blog-area{
+
+.main-blog-area {
     padding: 100px 0;
 }
 
-.main-blog-img img{
+.main-blog-img img {
     height: 300px;
     width: 100%;
     object-fit: cover;
     transform: scale(1) rotate(0);
     transition: transform .35s ease;
 }
-.main-blog-img{
+
+.main-blog-img {
     height: 300px;
     width: 100%;
 }
-.main-blog-card:hover img{
+
+.main-blog-card:hover img {
     transform: scale(1.2) rotate(4deg);
 }
 
-.main-contact-area{
+.main-contact-area {
     padding: 100px 0;
 }
-.main-blog-card a{
+
+.main-blog-card a {
     transition: all .35s ease;
 }
-.main-blog-card a:hover{
+
+.main-blog-card a:hover {
     color: var(--primary-color) !important;
 }
+
 @media (max-width: 990px) {
     .main-features-card .text-placeholder {
         font-size: 150px;
         line-height: 0.2;
     }
+
     .main-nav-header .nav-item .nav-link {
-        padding: 0.4rem 0rem ;
+        padding: 0.4rem 0rem;
     }
+
     .main-top-bar {
         display: none;
     }
@@ -690,17 +728,21 @@ footer ul li a {
         border: 0px !important;
 
     }
-    .main-nav-header nav{
+
+    .main-nav-header nav {
         background: white !important;
     }
-    .main-nav-header .navbar-toggler-icon{
+
+    .main-nav-header .navbar-toggler-icon {
         color: var(--secondary-color) !important;
     }
+
     .main-nav-header .navbar-brand,
-    .main-nav-header .nav-link{
+    .main-nav-header .nav-link {
         color: var(--secondary-color) !important;
     }
-    .main-home-hero{
+
+    .main-home-hero {
         padding: 200px 0 120px 0 !important;
     }
 }
@@ -710,24 +752,30 @@ footer ul li a {
     .main-home-hero h1 {
         font-size: 30px !important;
     }
-    .main-blog-area .col-md-4:last-child .main-blog-card{
+
+    .main-blog-area .col-md-4:last-child .main-blog-card {
         margin-bottom: 0px !important;
     }
-    .main-home-hero{
+
+    .main-home-hero {
         padding: 200px 0 120px 0 !important;
     }
-    .text-md{
+
+    .text-md {
         font-size: 1rem !important;
     }
+
     .main-office-card .main-office-detail,
-    .main-office-card .main-office-title{
+    .main-office-card .main-office-title {
         transform: none !important;
         opacity: 1 !important;
     }
+
     .main-office-card,
-    .main-office-card:hover{
+    .main-office-card:hover {
         background: transparent !important;
     }
+
     .main-office-card {
         height: auto !important;
         padding: 40px 0px !important;
@@ -735,7 +783,8 @@ footer ul li a {
         border-bottom: 1px solid rgba(255, 255, 255, 0.4) !important;
 
     }
-    .heading-md{
+
+    .heading-md {
         font-size: 30px !important;
     }
 
@@ -743,23 +792,27 @@ footer ul li a {
         border-bottom: 1px solid rgba(255, 255, 255, 0.4) !important;
 
     }
+
     .main-office-card-wrapper:last-child .main-office-card {
         border: 0px !important;
     }
 }
 
-.main-pricing-section{
+.main-pricing-section {
     padding: 0px 0px 100px;
 }
-.main-pricing-card{
+
+.main-pricing-card {
     padding: 60px 50px;
     margin-bottom: 30px;
 }
-.main-pricing-section .col-md-4:nth-child(2) .main-pricing-card{
+
+.main-pricing-section .col-md-4:nth-child(2) .main-pricing-card {
     background: var(--primary-color) !important;
     box-shadow: 0 20px 40px 10px rgb(0 0 0 / 3%);
 }
-.main-pricing-heading{
+
+.main-pricing-heading {
     padding: 100px 15px 50px;
 }
 
@@ -792,10 +845,12 @@ footer ul li a {
     height: 100%;
     object-fit: cover;
 }
-.main-testimonials-area .swiper-wrapper{
+
+.main-testimonials-area .swiper-wrapper {
     padding-bottom: 70px;
 }
-.main-testimonials-area{
+
+.main-testimonials-area {
     background: url("../images/testimonials1.jpg");
     background-size: cover;
     background-position: center;
@@ -803,28 +858,118 @@ footer ul li a {
 }
 
 .main-testimonials-area .swiper-pagination-bullet-active {
-    background: var(--primary-color)!important;
+    background: var(--primary-color) !important;
 }
 
-.main-testimonial-img{
+.main-testimonial-img {
     width: 90px;
     height: 90px;
 }
 
-.main-amenities-area{
+.main-amenities-area {
     padding: 130px 0 70px;
 }
-.main-amenities-card{
-    padding: 30px 35px ;
+
+.main-amenities-card {
+    padding: 30px 35px;
+
 }
-.main-amenities-img{
+
+.main-amenities-img {
     box-shadow: -8px 3px 30px 0 rgb(108 60 0 / 12%);
     width: 100px;
     height: 100px;
 }
 
-.main-amenities-img img{
+.main-amenities-img img {
     width: 45px;
     height: 45px;
     object-fit: cover;
+}
+
+.main-counter-card .percent {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background: none;
+    z-index: 1000;
+}
+
+.main-counter-area {
+    padding: 120px 0;
+    background: url("../images/bg-2.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+
+.main-counter-card .percent .number {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.main-counter-area svg {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    z-index: 1000;
+}
+
+.main-counter-area svg circle {
+    width: 100%;
+    height: 100%;
+    fill: none;
+    stroke: #ffffff;
+    stroke-width: 5;
+    stroke-linecap: round;
+    transform: translate(5px, 5px);
+}
+
+.main-counter-area svg circle:nth-child(2) {
+    stroke-dasharray: 440;
+    stroke-dashoffset: 440;
+}
+
+.main-counter-area .col-md-4:nth-child(1) .main-counter-card svg circle:nth-child(2) {
+    stroke-dashoffset: calc(440 - (440 * 85) / 100);
+    stroke: var(--primary-color);
+}
+
+.main-counter-area .col-md-4:nth-child(2) .main-counter-card svg circle:nth-child(2) {
+    stroke-dashoffset: calc(440 - (440 * 90) / 100);
+    stroke: var(--primary-color);
+}
+
+.main-counter-area .col-md-4:nth-child(3) .main-counter-card svg circle:nth-child(2) {
+    stroke-dashoffset: calc(440 - (440 * 70) / 100);
+    stroke: var(--primary-color);
+}
+
+.main-office-feature-area {
+    padding: 100px 0;
+}
+
+@media (max-width: 767px) {
+    .main-amenities-area {
+        padding: 80px 0 50px !important;
+    }
+    .card-white {
+        padding-left: 20px !important;
+        padding-right: 20px !important;
+    }
+    .main-hero-area {
+        padding: 250px 0px 140px 0px !important;
+    }
+    .main-counter-card{
+        margin-bottom: 40px;
+    }
 }
